Fix shadow clipping issue in Face Panel

--- a/src/scheduler/face-panel/face-panel.css
+++ b/src/scheduler/face-panel/face-panel.css
@@ -5,7 +5,6 @@
     flex-direction: column;
     align-items: stretch;
 
-    padding: 14px 20px;
     min-width: 200px;
     color: var(--main-color);
     background-color: var(--secondary-color);
@@ -20,6 +19,7 @@
     gap: 12px;
 
     overflow-y: auto;
+    padding: 14px 20px 0 20px;
 }
 
 .face-card {
@@ -62,4 +62,5 @@
 
 #modes-control-container {
     border-top: var(--border-line);
+    margin: 0 20px 14px 20px;
 }
